applications/prd/quality-control-webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quality-control-webserver
  namespace: wedigitek-prd
  labels:
    app: quality-control-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quality-control-webserver
  template:
    metadata:
      labels:
        app: quality-control-webserver
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
      - name: quality-control-webserver
        image: ghcr.io/wedigitek/webserver-quality-control:rc
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "25m"
          limits:
            memory: "256Mi"
            cpu: "25m"
