applications/prd/quality-control-webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quality-control-webserver
  namespace: wedigitek-prd
spec:
  selector:
    app: quality-control-webserver
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
