applications/prd/quality-control-webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quality-control-webserver
  namespace: wedigitek-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - qualitycontrol.trywefood.dev
    secretName: quality-control-webserver-tls

  rules:
  - host: qualitycontrol.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quality-control-webserver
            port:
              number: 80
